Fix maven openjdk compat issue