@@ -200,7 +200,7 @@
                 <version>2.22.1</version>
                 <configuration>
                     <!-- CircleCI build workaround -->
-                    <argLine>${surefireArgLine} -Xms1024m -Xmx2048m</argLine>
+                    <argLine>${surefireArgLine} -Xms1024m -Xmx2048m -XX:MaxPermSize=256m</argLine>
                     <reuseForks>true</reuseForks>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
